--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-"2020 Chesapeake Bay Hack the Bay Hackathon Data Visualization" 
+<h1>2020 Chesapeake Bay Hackathon Data Visualization<h1> 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/HbeXM46JjAo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
