--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<h1>2020 Chesapeake Bay Hackathon Data Visualization</h1> 
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/HbeXM46JjAo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<!doctype html>
+<html>
+  <head>
+    <title>Welcome to Jen-Li Chen's Website!</title>
+  </head>
+  <body>
+    <h1>2020 Chesapeake Bay Hackathon Data Visualization</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/HbeXM46JjAo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </body>
+</html>
 
